--- a/style.css
+++ b/style.css
@@ -1,18 +1,24 @@
-@import url('https://fonts.googleapis.com/css?family=PT+Mono&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Cutive+Mono&display=swap');
 
 body{
-    font-family: 'PT Mono', monospace;
+    font-family: 'Cutive Mono', monospace;
     background: linear-gradient(35deg, black, rgb(46, 37, 37), gray);
     margin-top: 40px;
 }
-
-
+#projeto{
+    background: linear-gradient(35deg, rgb(49, 49, 104), brown, rgb(44, 34, 34));
+}
+img{
+    width: 300px;
+    height: 250px;
+    padding: 10px;
+}
 h1{
     text-align: center;
     font: bold;
     color: aliceblue;
     font-size: 250%;
-    margin-top: 8%;
+    margin-top: 10%;
          
 }
 h3{
@@ -24,50 +30,9 @@ h2{
     text-align: center;
     color: aliceblue;
 }
-#container{
-    display: grid;
-    height: 650px; 
-    width: 100%;   
-    background: linear-gradient(35deg, rgb(49, 49, 104), brown, rgb(44, 34, 34));
-    grid-template-columns: 24% 24% 24%;
-    grid-template-rows: 40% 40%;
-    grid-column-gap: 70px;
-    grid-row-gap: 30px;
-    
-}
-#piriquita{
-    transform: translate(70px, 40px);
-    text-align: center;
-    color: aliceblue;
-        
-}
-#negao{
-    transform: translate(120px, 40px);
-    text-align: center;
-    color: aliceblue;
-}
-#media{
-    transform: translate(150px, 40px);
-    text-align: center;
-    color: aliceblue;
-}
-#afinador{
-    transform: translate(290px, 50px);
-    text-align: center;
-    color: aliceblue;
-}
-#imc{
-    transform: translate(330px, 50px);
-    text-align: center;
-    color: aliceblue;
-}
+
 #sobre{
-    display: grid;
-    margin-left: 30px;
-    height: 350px; 
-    width: 100%;   
-    grid-template-columns: 24% 24%;
-    grid-column-gap: 70px;
+    text-align: center;
 }
 
 a{
@@ -95,6 +60,8 @@ a:hover{
     z-index: 9999; /* a mágica que faz com que o grid não fique na frente do menu*/
     height: 50px;
     width: 100%;
+    font-weight: bolder;
+    font-size: larger;
 }
 .navbar a{
     float: right;
@@ -110,9 +77,7 @@ a:hover{
     text-align: center;
     color: aliceblue;
 }
-.img{
-    width: 50px;
-}
+
 #contatoImg{
     display: flex;
     flex-direction: row;
@@ -122,31 +87,31 @@ a:hover{
     width: 100%;    
 }
 #imgT{
-    font-size: 40px;
+    font-size: 30px;
 }
 #imgT:hover{
     transform: translateY(8px);    
 }
 #imgL{
-    font-size: 40px;
+    font-size: 30px;
 }
 #imgL:hover{
     transform: translateY(8px);    
 }
 #imgZ{
-    font-size: 40px;
+    font-size: 30px;
 }
 #imgZ:hover{
     transform: translateY(8px);    
 }
 #fcc{
-    font-size: 40px;
+    font-size: 30px;
 }
 #fcc:hover{
     transform: translateY(8px);    
 }
 #github{
-    font-size: 40px;
+    font-size: 30px;
 }
 #github:hover{
     transform: translateY(8px); 
@@ -154,24 +119,4 @@ a:hover{
 #email:hover{
     transform: translateY(8px); 
     color: yellow;
-}
-@media (min-width: 500px) {
-  html {
-    font-size: 0.62em;
-  }
-}
-@media (min-width: 800px) {
-  html {
-    font-size: 0.75em;
-  }
-}
-@media (min-width: 1000px) {
-  html {
-    font-size: 0.87em;
-  }
-}
-@media (min-width: 1200px) {
-  html {
-    font-size: 1em;
-  }
 }
