--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body{
 img{
     width: 300px;
     height: 250px;
-    padding: 10px;
+    padding: 20px 10px 10px 20px;
 }
 h1{
     text-align: center;
