--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body{
 img{
     width: 300px;
     height: 250px;
-   padding: 30px 10px 30px 20px;
+   padding:20px;
 }
 h1{
     text-align: center;
