--- a/style.css
+++ b/style.css
@@ -7,11 +7,13 @@ body{
 }
 #projeto{
     background: linear-gradient(35deg, black, gray, black);
+    width: 900px;
+    margin: auto;
 }
 img{
     width: 300px;
     height: 250px;
-    padding: 20px;
+    padding: 70px;
 }
 h1{
     text-align: center;
