--- a/style.css
+++ b/style.css
@@ -180,3 +180,9 @@ a:hover{
     width: 380px;
     height: 200px;
 }
+
+@media only screen and (max-width: 600px) {
+    #grid{
+        flex-direction: column;
+        flex-wrap: nowrap;
+}
