--- a/style.css
+++ b/style.css
@@ -183,10 +183,10 @@ a:hover{
 
 @media only screen and (max-width: 600px) {
     .item{
-        width: 10%;
+        width: 20%;
         height: 20%;
     }
-    .nav a{
+    .navbar a{
         float: left;
         text-align: left;
     }
