--- a/style.css
+++ b/style.css
@@ -189,10 +189,19 @@ a:hover{
     }
     .navbar{
         display: flex;
-    .navbar a{
-        float: left;
-        text-align: left;
+        width: auto;
     }
+    .navbar a{
+        float: right;
+        text-align: center;
+    }
+    #sobre{
+        width: auto;
+        flex-direction: row;
+    }
+    #contatoImg{
+        flex-direction: column;
+            
     
  }
     
