--- a/style.css
+++ b/style.css
@@ -184,8 +184,8 @@ a:hover{
 
 @media only screen and (max-width: 600px) {
     .item{
-        width: 40%;
-        height: 20%;
+        width: 60%;
+        height: 40%;
     }
     .navbar{
         display: flex;
@@ -202,7 +202,11 @@ a:hover{
     #contatoImg{
         flex-direction: column;
     }
-            
+    #grid{
+        flex-direction: column;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
     
  }
     
