--- a/style.css
+++ b/style.css
@@ -205,7 +205,7 @@ a:hover{
     #grid{
         align-items: stretch; 
         flex-direction: column;
-        justify-content: center;
+        justify-content: space-between;
     }
     
  }
