--- a/style.css
+++ b/style.css
@@ -184,8 +184,8 @@ a:hover{
 
 @media only screen and (max-width: 600px) {
     .item{
-        width: 30%;
-        height: 10%;
+        width: 50%;
+        height: 20%;
     }
     .navbar{
         display: flex;
@@ -196,8 +196,8 @@ a:hover{
         text-align: center;
     }
     #sobre{
-        width: auto;
-        flex-direction: row;
+       flex-direction: row;
+        justify-content: left;
     }
     #contatoImg{
         flex-direction: column;
@@ -206,6 +206,7 @@ a:hover{
         align-items: stretch; 
         flex-direction: column;
         justify-content: space-between;
+        height: 750px;
     }
     
  }
