--- a/style.css
+++ b/style.css
@@ -137,7 +137,16 @@ a:hover{
     align-items: baseline;
     text-align: center;
     width: 100%;
-
+}
+#menu{
+    float: right; 
+    padding: 15px;
+    margin: auto;
+    font-weight: bolder;
+    font-size: 20px;
+}
+#menu a{
+    padding: 1px 20px;
 }
 
 
@@ -173,6 +182,16 @@ a:hover{
     width: 300px;
     height: 200px;
     padding: 20px;
-
-
+}
+@media only screen and (max-width: 720px) {
+    .navbar {
+        margin: auto;        
+    }
+    #menu a{
+        padding: 20px 10px;
+    }
+    #menu {
+        display: inline-block;
+    }
+    
 }
