--- a/style.css
+++ b/style.css
@@ -145,9 +145,7 @@ a:hover{
     font-weight: bolder;
     font-size: 20px;
 }
-#menu a{
-    padding: 1px 20px;
-}
+
 
 
 /*CLASSES*/
@@ -185,28 +183,28 @@ a:hover{
 }
 @media only screen and (max-width: 720px) {
     h1{
-        margin-top: 15px;
+        margin-top: 30px;
     }
     .navbar {
         margin: auto;        
     }
-    #menu a{
-        padding: 20px 10px;
+    .navbar a{
+        padding: 1px 10px;
     }
     #menu {
         display: inline-block;
     }
     #grid-container{
-        grid-template-rows: 150px 150px 150px 150px 150px 150px;
+        grid-template-rows: auto;
+        grid-row-gap: 10px;
+        padding: 10px;
         
     }
     #grid-sobre{
-    display: grid;
-    grid-template-rows: 150px 150px;
-    grid-row-gap: 50px;
-    justify-content: center;
-      
-}
+        display: grid;
+        grid-template-rows: auto;
+        grid-row-gap: 10px;
+   }
     
     
     
