--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
-@import url('https://fonts.googleapis.com/css?family=PT+Mono&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Work+Sans&display=swap');
 
 
 /*TAGS*/
 body{
-    font-family: 'PT Mono', monospace;
+    font-family: 'Work Sans', sans-serif;
     background: linear-gradient(35deg, black, rgb(46, 37, 37), gray);
     margin-top: 40px;
 }
@@ -183,19 +183,20 @@ a:hover{
 }
 @media only screen and (max-width: 720px) {
     h1{
-        margin-top: 30px;
+        margin-top: 70px;
     }
     .navbar {
         margin: auto;        
     }
     .navbar a{
         padding: 1px 10px;
+        float: left;
     }
     #menu {
         display: inline-block;
     }
     #grid-container{
-        grid-template-rows: auto;
+        grid-template-rows: auto auto auto;
         grid-row-gap: 10px;
         padding: 10px;
         
@@ -204,7 +205,12 @@ a:hover{
         display: grid;
         grid-template-rows: auto;
         grid-row-gap: 10px;
+        margin-left: 20px;
+        justify-content: center;
    }
+    #piriquita{
+    transform: translate(0px, 0px);
+    }
     
     
     
