--- a/style.css
+++ b/style.css
@@ -175,6 +175,10 @@ a:hover{
     #contatoImg{
         display: flex;
         flex-direction: column;
+        align-items: center;
+    }
+    #menu{
+        padding: 5px;
     }
     
     
