--- a/style.css
+++ b/style.css
@@ -158,9 +158,11 @@ a:hover{
     }
     
     #grid-sobre{
-        display: grid;
+        display: flexbox;
         grid-template-columns: auto;
         grid-row-gap: 30px;
+        padding: 15px;
+        margin-top: 20px;
     }
     #contatoImg{
         display: flex;
@@ -170,7 +172,23 @@ a:hover{
     #menu{
         padding: 1px;
     }
-    
+    #projeto{
+        width: 300px;
+        height: 300px;
+        text-align: center;
+        margin: auto;
+    }
+    .carousel-item{
+        width: 200px;
+        height: 200px;        
+    }
+    h1{
+        padding: 10px;
+    }
+    .carousel-item img{
+        width: 300px;
+        height: 200px;
+      }
     
    
 }
