--- a/style.css
+++ b/style.css
@@ -1,198 +1,490 @@
-@import url('https://fonts.googleapis.com/css?family=Work+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Inconsolata:400,700&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Cousine:400,700&display=swap');
 
-
-
-/*TAGS*/
-body{
-    font-family: 'Work Sans', sans-serif;
-    background: linear-gradient(35deg, black, rgb(46, 37, 37), gray);
-    margin-top: 40px;
+*,
+*::before,
+*::after{
+    box-sizing: border-box;
 }
 
 html{
     scroll-behavior: smooth;
 }
 
+/* Custom Properties */
+:root{
+    --ff-primary: 'Inconsolata', monospace;
+    --ff-secondary: 'Cousine', serif;
 
-h1{
-    text-align: center;
-    font: bold;
-    color: aliceblue;
-    font-size: 250%;
-    margin-top: 5%;
-         
-}
-h3{
-    text-align: center;
-    color: brown;
-    font-size: 180%;
-}
-h2{
-    font-size: 200%;
-    text-align: center;
-    color: aliceblue;
-}
-footer{
-    color: aliceblue;
-    text-align: center;
+    --fw-reg: 300;
+    --fw-bold: 900;
+
+    --clr-light: #fff;
+    --clr-dark: #303030;
+    --clr-accent: #16e0bd;
+
+    --fs-h1: 3rem;
+    --fs-h2: 2.25rem;
+    --fs-h3: 1.25rem;
+    --fs-body: 1rem;
+
+    --bs: 0.25em 0.25em 0.75em rgba(0, 0, 0, .25),
+          0.125em 0.125em 0.25em rgba(0, 0, 0, .15);
 }
 
-a{
-    color: aliceblue;
-    
+@media (min-width: 800px){
+    :root{
+        --fs-h1: 4.5rem;
+        --fs-h2: 3.75rem;
+        --fs-h3: 1.5rem;
+        --fs-body: 1.125rem;
+    }
 }
-a:link{
+
+/* General Styles */
+
+body{
+    background-color: var(--clr-light);
+    color: var(--clr-dark);
+    margin: 0;
+    font-family: var(--ff-primary);
+    font-size: var(--fs-body);
+    line-height: 1.6;
+}
+
+section{
+    padding: 5em 2em;
+}
+
+img{
+    display: block;
+    max-width: 100%;
+}
+
+strong { font-weight: var(--fw-bold) }
+
+:focus{
+    outline: 3px solid var(--clr-accent);
+    outline-offset: 3px;
+}
+
+/* Buttons */
+
+.btn{
+    display: inline-block;
+    padding: .5em 2.5em;
+    background-color: var(--clr-accent);
+    color: var(--clr-dark);
     text-decoration: none;
-    color: white;
+    cursor: pointer;
+    font-size: .8rem;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    font-weight: var(--fw-bold);
+    transition: transform 200ms ease-in-out;
 }
 
-a:visited{
-    color: whitesmoke;
-    text-decoration: underline;
-}
-a:hover{
-    color: yellow;
+.btn:hover{
+    transform: scale(1.1);
 }
 
-/*IDS*/
+/* Typography */
 
-#grid-sobre{
+h1,
+h2,
+h3{
+    line-height: 1;
+    margin: 0;
+}
+
+h3{
+    padding: 1em;
+    font-weight: var(--fw-bold);
+}
+
+h1 { font-size: var(--fs-h1) }
+h2 { font-size: var(--fs-h2) }
+h3 { font-size: var(--fs-h3) }
+
+.section__title{
+    margin-bottom: .25em;
+}
+
+.section__title--intro{
+    font-weight: var(--fw-reg);
+}
+
+.section__title--intro strong{
+    display: block;
+}
+
+
+.section__subtitle{
+    margin: 0;
+    font-size: var(--fs-h3);
+}
+
+.section__subtitle--intro,
+.section__subtitle--about{
+    background: var(--clr-accent);
+    padding: .25em 1em; 
+    font-family: var(--ff-secondary);
+    margin-bottom: 1em;
+}
+
+.section__title--work{
+    color: var(--clr-accent);
+    font-weight: var(--fw-bold);
+    margin-bottom: 2em;
+}
+
+
+/* header  */
+
+header{
+    display: flex;
+    justify-content: space-between;
+    padding: 1em;
+}
+
+.logo{
+    max-width: 100px;
+}
+
+.nav{
+    position: fixed;
+    background: var(--clr-dark);
+    color: var(--clr-light);
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 100;
+
+    transform: translateX(100%);
+    transition: transform 250ms cubic-bezier(.5, 0, .5, 1);
+}
+
+.nav__list{
+    list-style: none;
+    display: flex;
+    height: 100%;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    margin: 0;
+    padding: 0;
+}
+
+.nav__link{
+    color: inherit;
+    font-weight: var(--fw-bold);
+    font-size: var(--fs-h2);
+    text-decoration: none;
+}
+
+.nav__link:hover{
+    color: var(--clr-accent);
+}
+
+.nav-toggle{
+    padding: .5em;
+    background: transparent;
+    border: 0;
+    cursor: pointer;
+    position: absolute;
+    right: 1em;
+    top: 1em;
+    z-index: 1000;
+}
+
+.nav-open .nav{
+    transform: translateX(0);
+}
+
+.nav-open .nav-toggle{
+    position: fixed;
+}
+
+.nav-open .hamburger{
+    transform: rotate(.625turn);
+}
+
+.nav-open .hamburger::before{
+    transform: rotate(90deg) translateX(-6px);
+}
+
+.nav-open .hamburger::after{
+    opacity: 0;
+}
+
+.hamburger{
+   display: block;
+   position: relative;
+}
+
+.hamburger,
+.hamburger::before,
+.hamburger::after{
+    background: var(--clr-accent);
+    width: 2em;
+    height: 3px;
+    border-radius: 1em;
+    transition: transform 250ms ease-in-out;
+}
+
+.hamburger::before,
+.hamburger::after{
+    content: '';
+    position: absolute;
+    left: 0;
+    right: 0;
+}
+
+.hamburger::before { top: 6px; }
+.hamburger::after { bottom: 6px; }
+
+/* Intro section  */
+
+.intro{
+    position: relative;
+}
+
+.intro__img{
+    box-shadow: var(--bs);
+}
+
+.section__subtitle--intro{
+    display: inline-block;
+}
+
+p a{
+    text-decoration: none;
+    color: var(--clr-accent);
+}
+
+@media (min-width: 600px){
+    .intro{
+        display: grid;
+        width: min-content;
+        margin: 0 auto;
+        grid-column-gap: 1em;
+        grid-template-areas: 
+            "img title"
+            "img subtitle";
+        grid-template-columns: min-content max-content;
+    }
+
+    .intro__img{
+        grid-area: img;
+        min-width: 250px;
+        position: relative;
+        z-index: 2;
+    }
+
+    .section__subtitle--intro{
+        align-self: start;
+        grid-column: -1 / 1;
+        grid-row: 2;
+        text-align: right;
+        position: relative;
+        left: -1.5em;
+        width: calc(100% + 1.5em);
+    }
+}
+
+/* My services section */
+
+.my-services{
+    background-color: var(--clr-dark);
+    background-image: url(img/close-up-photo-of-keyboard-220357.jpg);
+    background-size: cover;
+    background-blend-mode: multiply;
+    color: var(--clr-light);
+    text-align: center;
+}
+
+.section__title--services{
+    color: var(--clr-accent);
+    position: relative;   
+}
+
+.section__title--services::after{
+    content: '';
+    display: block;
+    width: 3em;
+    height: 1px;
+    margin: 0.5em auto 1em;
+    background-color: var(--clr-light);
+    opacity: 0.5;
+}
+.services{
+    margin-bottom: 4em;
+}
+
+.service{
+    max-width: 500px;
+    margin: 0 auto;
+}
+
+@media (min-width: 800px){
+    .services{
+        display: flex;
+        max-width: 1000px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    .service + .service{
+        margin-left: 2em;
+    }
+}
+
+.about-me{
+    max-width: 1000px;
+    margin: 0 auto;
+}
+
+.about-me__img{
+    box-shadow: var(--bs);
+}
+
+@media (min-width: 600px){
+    .about-me{
+        display: grid;
+        grid-template-columns: 1fr 200px;
+        grid-template-areas: 
+            "title img"
+            "subtitle img"
+            "text img";
+        grid-column-gap: 2em;
+    }
+
+    .section__title--about{
+        grid-area: title;
+    }
+
+    .section__subtitle--about{
+        grid-column: 1 / -1;
+        grid-row: 2;
+        position: relative;
+        left: -1em;
+        width: calc(100% + 2em);
+        padding-left: 1em;
+        padding-right: calc(200px + 4em);
+    }
+
+    .about-me__img{
+        grid-area: img;
+        position: relative;
+        z-index: 2;
+    }
+}
+
+/* My Work */
+
+.my-work{
+    background-color: var(--clr-dark);
+    color: var(--clr-light);
+    text-align: center;
+}
+.my-work h3{
+    position: relative;
+    bottom: 60px
+}
+
+.portfolio{
     display: grid;
-    grid-template-columns: 500px 500px;
-    grid-column-gap: 10px;
-    justify-content: center;  
+    grid-template-columns: repeat(4, 1fr);
       
 }
-#imgT{
-    font-size: 30px;
+
+@media (max-width: 600px){
+    .portfolio{
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+        height: 15rem;
+        overflow-y: scroll;
+         
+    }
 }
-#imgT:hover{
-    transform: translateY(8px);    
+
+.portfolio__item{
+    background: var(--clr-accent);
+    overflow: hidden;
+    height: 12rem;
 }
-#imgL{
-    font-size: 30px;
+.portfolio__img{
+    transition: 
+        transform 750ms cubic-bezier(.5, 0, .5, 1),
+        opacity 250ms linear; 
+    width: 100%;
+    height: 100%;
 }
-#imgL:hover{
-    transform: translateY(8px);    
+
+.portfolio__item:focus{
+    position: relative; 
+    z-index: 2;
 }
-#imgZ{
-    font-size: 30px;
+
+.portfolio__img:hover,
+.portfolio__item:focus .portfolio__img{
+    transform: scale(1.2);
+    opacity: .75;
 }
-#imgZ:hover{
-    transform: translateY(8px);    
+
+.section__subtitle--work{
+    padding: 1em;
+    margin-bottom: 2em;
 }
-#fcc{
-    font-size: 30px;
+
+#date{
+    color: var(--clr-accent);
+    margin: 1em auto;
+    position: relative;
+    top: 40px
 }
-#fcc:hover{
-    transform: translateY(8px);    
+
+/* Footer */
+
+.footer{
+    background: #111;
+    color: var(--clr-accent);
+    text-align: center;
+    padding: 2.5em 0;
+    font-size: var(--fs-h3);
 }
-#github{
-    font-size: 30px;
+
+.footer a{ 
+    color: inherit;
+    text-decoration: none;
 }
-#github:hover{
-    transform: translateY(8px); 
+
+.footer__link{
+    font-weight: var(--fw-bold);
 }
-#email:hover{
-    transform: translateY(8px); 
-    color: yellow;
+
+.footer__link:hover,
+.social-list__link:hover{
+    opacity: .7;
 }
-#contatoImg{
+
+.footer__link:hover{
+     text-decoration: underline;
+}
+
+.social-list{
+    list-style: none;
     display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    align-items: baseline;
-    text-align: center;
-    width: 100%;
+    justify-content: center;
+    margin: 2em 0 0;
+    padding: 0;
 }
 
-#carouselExampleCaptions{
-    text-align: center;
-    margin: auto;
-}
-#contato{
-    text-align: center;
-    color: aliceblue;
+.social-list__item{
+    margin: 0 .5em;
 }
 
-
-/*CLASSES*/
-.navbar{
-    
-    background-color: rgb(131, 21, 21);
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 9999; /* a mágica que faz com que o grid não fique na frente do menu*/
-    height: 50px;
-    width: 100%;
-}
-.navbar a{
-    float: right;
-    display: block;
-    color: aliceblue;
-    text-align: center;
-    padding: 1px 18px;
-}
-
-.nav a:hover{
-    color: yellow;
-}
-
-.img{
-    width: 30px;
-}
-.item{
-    width: 300px;
-    height: 200px;
-    padding: 10px;
-}
-.carousel-inner img {
-    margin: auto;
-  }
-@media only screen and (max-width: 768px) {
-    .navbar {
-        margin: auto;        
-    }
-    #menu a{
-        padding: 20px 10px;
-    }
-    #menu {
-        display: inline-block;
-    }
-    
-    #grid-sobre{
-        display: flexbox;
-        grid-template-columns: auto;
-        grid-row-gap: 30px;
-        padding: 15px;
-        margin-top: 20px;
-    }
-    #contatoImg{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-    #menu{
-        padding: 1px;
-    }
-    #projeto{
-        width: 300px;
-        height: 300px;
-        text-align: center;
-        margin: auto;
-    }
-    .carousel-item{
-        width: 200px;
-        height: 200px;        
-    }
-    h1{
-        padding: 10px;
-    }
-    .carousel-item img{
-        width: 300px;
-        height: 200px;
-      }
-    
-   
+.social-list__link{
+    padding: .5em;
 }
